Develop (#54)
* [maven-release-plugin] prepare release ppm-commons-2.1.3

* [maven-release-plugin] prepare for next development iteration

* Adding optional depenencies in pom

* fix: bump jacoco version

* fix: Removing Travis CI and Bettercodehub no longer available

* fix: bump dep versions

* fix: pom

* [maven-release-plugin] prepare release 2.1.4

* [maven-release-plugin] prepare for next development iteration

* chore: update deps versions

* #53 - feat: migrating to java 11

* feat: remove gson lib - it closes #53

* fix: github build action

* Update src/main/java/br/com/ppm/commons/formatter/TextStackTraceFormatter.java

Co-authored-by: sonatype-lift[bot] <37194012+sonatype-lift[bot]@users.noreply.github.com>

* fix: imports

---------

Co-authored-by: sonatype-lift[bot] <37194012+sonatype-lift[bot]@users.noreply.github.com>