@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>br.com.ppm</groupId>
     <artifactId>ppm-commons</artifactId>
-    <version>2.1.4-SNAPSHOT</version>
+    <version>2.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>PPM Commons</name>
@@ -12,13 +12,14 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <dependency.version.gson>2.8.9</dependency.version.gson>
-        <dependency.version.junit>4.13.1</dependency.version.junit>
-        <dependency.version.assertj>3.15.0</dependency.version.assertj>
-        <dependency.version.hamcrest-core>1.3</dependency.version.hamcrest-core>
-        <dependency.version.log4j>2.17.1</dependency.version.log4j>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <dependency.version.jakarta.json-api>2.1.1</dependency.version.jakarta.json-api>
+        <dependency.version.parsson>1.1.1</dependency.version.parsson>
+        <dependency.version.junit>4.13.2</dependency.version.junit>
+        <dependency.version.assertj>3.24.2</dependency.version.assertj>
+        <dependency.version.hamcrest-core>2.2</dependency.version.hamcrest-core>
+        <dependency.version.log4j>2.20.0</dependency.version.log4j>
         <dependency.version.jacoco>0.8.8</dependency.version.jacoco>
         <sonar-jacoco-listeners.version>3.2</sonar-jacoco-listeners.version>
         <jacoco.output.directory>${project.build.directory}/jacoco</jacoco.output.directory>
@@ -32,7 +33,7 @@
         <url>https://github.com/pedrotoliveira/ppm-commons.git</url>
         <connection>scm:git:ssh://git@github.com/pedrotoliveira/ppm-commons.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/pedrotoliveira/ppm-commons.git</developerConnection>
-        <tag>ppm-commons-2.1.1</tag>
+        <tag>ppm-commons-2.2.0</tag>
     </scm>
 
     <developers>
@@ -63,10 +64,17 @@
     </distributionManagement>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api -->
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${dependency.version.gson}</version>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
+            <version>${dependency.version.jakarta.json-api}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.parsson/parsson -->
+        <dependency>
+            <groupId>org.eclipse.parsson</groupId>
+            <artifactId>parsson</artifactId>
+            <version>${dependency.version.parsson}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -121,8 +129,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
+                    <release>11</release>
                     <verbose>true</verbose>
                     <fork>true</fork>
                 </configuration>
@@ -130,7 +139,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -143,10 +152,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.1.1</version>
                 <configuration>
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                    <source>8</source>
+                    <failOnError>false</failOnError>
+                    <source>11</source>
                 </configuration>
                 <executions>
                     <execution>
@@ -168,7 +177,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>3.0.1</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -188,7 +197,7 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.8</version>
+                        <version>1.6.13</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>ossrh</serverId>
@@ -199,7 +208,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-                        <version>2.5.3</version>
+                        <version>3.0.0-M7</version>
                     </plugin>
                 </plugins>
             </build>
@@ -216,7 +225,7 @@
                         <version>2.22.2</version>
                         <configuration>
                             <!--suppress UnresolvedMavenProperty -->
-                            <argLine>${jacoco.agent.ut.arg}</argLine>
+                            <argLine>${jacoco.agent.ut.arg}  --illegal-access=permit</argLine>
                             <!-- Specific to generate mapping between tests and covered code -->
                             <properties>
                                 <property>
@@ -234,7 +243,7 @@
                         <version>2.22.2</version>
                         <configuration>
                             <!--suppress UnresolvedMavenProperty -->
-                            <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}</argLine>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg} --illegal-access=permit</argLine>
                             <!-- Specific to generate mapping between tests and covered code -->
                             <properties>
                                 <property>
